plugins/xpath/xpath-lang/testData/xpath2/highlighting/incorrectNodeKindTests.xpath2
<error descr="Missing argument for node kind test">schema-element()</error> |
schema-element(x, <error descr="Too many arguments">y</error>) |

<error descr="Missing argument for node kind test">schema-attribute()</error> |
schema-attribute(x, <error descr="Too many arguments">y</error>) |

attribute(x, xs:integer, <error descr="Too many arguments">y</error>) |

attribute(x, <error descr="QName expected">1</error>) |

document-node(<error descr="element() or schema-element() expected">x</error>, <error descr="Too many arguments">y</error>) |

processing-instruction(<error descr="String literal or NCName expected">1</error>) | processing-instruction(a, <error descr="Too many arguments">b</error>)
